# bandeng

./: .gitignore  Cargo.toml  README.md  RELEASE_NOTES.md  app.go  go.mod  go.sum  main.go  slint_test.slint  test_slint.slint  wails.json
.github/workflows/: release.yml
frontend/: app.js  index.html  package-lock.json  package.json  package.json.md5  postcss.config.js  tailwind.config.js
frontend/wailsjs/go/main/: App.d.ts  App.js
mikrotik-tokio-patch/: .cargo_vcs_info.json  Cargo.toml
mikrotik-tokio-patch/src/: device.rs
src/: main.rs
src/mikrotik/: api.rs  client.rs  mod.rs  models.rs  tls.rs
src/utils/: config.rs  logger.rs  mod.rs
ui/: app.slint  dashboard.slint  login.slint
