[package]
name = "bandeng-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
chrono = "0.4.45"
dirs = "6.0.0"
mikrotik-rs = { version = "0.8.0", features = ["tokio-tls"] }
rustls = { version = "0.23.42", features = ["ring"] }
rustls-pemfile = "2.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
slint = "1.17.1"
tokio = { version = "1.52.4", features = ["full"] }
webpki-roots = "1.0.8"

[build-dependencies]
slint-build = "1.17.1"


[patch.crates-io]
mikrotik-tokio = { path = "./mikrotik-tokio-patch" }

